; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs-opengl/extr_gl-subsystem.c_get_fbo_by_tex.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs-opengl/extr_gl-subsystem.c_get_fbo_by_tex.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fbo_info = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.fbo_info* (i32*)* @get_fbo_by_tex to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.fbo_info* @get_fbo_by_tex(i32* %0) #0 {
  %2 = alloca %struct.fbo_info*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = call i32 @get_tex_dimensions(i32* %6, i32* %4, i32* %5)
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %10, label %9

9:                                                ; preds = %1
  store %struct.fbo_info* null, %struct.fbo_info** %2, align 8
  br label %15

10:                                               ; preds = %1
  %11 = load i32*, i32** %3, align 8
  %12 = load i32, i32* %4, align 4
  %13 = load i32, i32* %5, align 4
  %14 = call %struct.fbo_info* @get_fbo(i32* %11, i32 %12, i32 %13)
  store %struct.fbo_info* %14, %struct.fbo_info** %2, align 8
  br label %15

15:                                               ; preds = %10, %9
  %16 = load %struct.fbo_info*, %struct.fbo_info** %2, align 8
  ret %struct.fbo_info* %16
}

declare dso_local i32 @get_tex_dimensions(i32*, i32*, i32*) #1

declare dso_local %struct.fbo_info* @get_fbo(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
